WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217208
[GTK] Fix MiniBrowser compilation warnings
https://bugs.webkit.org/show_bug.cgi?id=217208
Summary
[GTK] Fix MiniBrowser compilation warnings
Philippe Normand
Reported
2020-10-02 03:32:08 PDT
[94/211] Building C object Tools/MiniBrowser/gtk/CMakeFiles/MiniBrowser.dir/main.c.o ../../Tools/MiniBrowser/gtk/main.c:653:9: warning: 'webkit_web_context_set_network_proxy_settings' is deprecated: Use 'webkit_website_data_manager_set_network_proxy_settings' instead [-Wdeprecated-declarations] webkit_web_context_set_network_proxy_settings(webContext, WEBKIT_NETWORK_PROXY_MODE_CUSTOM, webkitProxySettings); ^ DerivedSources/ForwardingHeaders/webkit2gtk/webkit2/WebKitWebContext.h:173:55: note: 'webkit_web_context_set_network_proxy_settings' has been explicitly marked deprecated here __attribute__((visibility("default"))) __attribute__((__deprecated__("Use '" "webkit_website_data_manager_set_network_proxy_settings" "' instead"))) void ^ ../../Tools/MiniBrowser/gtk/main.c:698:9: warning: 'webkit_web_context_set_tls_errors_policy' is deprecated: Use 'webkit_website_data_manager_set_tls_errors_policy' instead [-Wdeprecated-declarations] webkit_web_context_set_tls_errors_policy(webContext, WEBKIT_TLS_ERRORS_POLICY_IGNORE); ^ DerivedSources/ForwardingHeaders/webkit2gtk/webkit2/WebKitWebContext.h:250:55: note: 'webkit_web_context_set_tls_errors_policy' has been explicitly marked deprecated here __attribute__((visibility("default"))) __attribute__((__deprecated__("Use '" "webkit_website_data_manager_set_tls_errors_policy" "' instead"))) void ^ 2 warnings generated.
Attachments
Patch
(5.52 KB, patch)
2020-10-02 03:39 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2020-10-02 03:39:50 PDT
Created
attachment 410307
[details]
Patch
Carlos Garcia Campos
Comment 2
2020-10-02 03:48:23 PDT
Comment on
attachment 410307
[details]
Patch Thanks!
EWS
Comment 3
2020-10-02 04:45:02 PDT
Committed
r267871
: <
https://trac.webkit.org/changeset/267871
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410307
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-10-02 04:46:18 PDT
<
rdar://problem/69876513
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug