[GTK] Fix MiniBrowser compilation warnings https://bugs.webkit.org/show_bug.cgi?id=217208

Patch by Philippe Normand <pnormand@igalia.com> on 2020-10-02
Reviewed by Carlos Garcia Campos.

webkit_web_context_set_network_proxy_settings() is deprecated in favor of
webkit_website_data_manager_set_network_proxy_settings().
webkit_web_context_set_tls_errors_policy() is deprecated in favor of
webkit_website_data_manager_set_tls_errors_policy().

* MiniBrowser/gtk/main.c:
(activate):
* MiniBrowser/wpe/main.cpp:
(main):

Canonical link: https://commits.webkit.org/229989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267871 268f45cc-cd09-0410-ab3c-d52691b4dbfc